--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-remote_theme: mmistakes/minimal-mistakes
+remote_theme: remote_theme: mmistakes/minimal-mistakes
 title: Testing github pages
 description: testing description
